--- a/dvdlogo.html
+++ b/dvdlogo.html
@@ -4,12 +4,12 @@
 
   <title> Flying</title>
   <div id="headline"><h1>Imitation of Moving DVD Logo</h1></div>
-  <link rel="stylesheet" type="text/css" href="F:\webproject\css\dvdlogos.css">
+  <link rel="stylesheet" type="dvdlogos.css">
 </head>
 
 
   <body>
     <canvas id="canvas" width="800" height="600"></canvas>
-    <script src="F:\webproject\js\dvdlogo.js"></script>
+    <script src="dvdlogo.js"></script>
 
     </body></html>
