--- a/dvdlogo.html
+++ b/dvdlogo.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
+<<!DOCTYPE html>
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <title> Flying</title>
   <div id="headline"><h1>Imitation of Moving DVD Logo</h1></div>
-  <link rel="stylesheet" type="dvdlogos.css">
+  <link rel="stylesheet" type="text/css" href="dvdlogos.css">
 </head>
 
 
@@ -13,3 +13,4 @@
     <script src="dvdlogo.js"></script>
 
     </body></html>
+
